# Reserve-Flow

./: .gitignore  AGENTS.md  docker-compose.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: deploy.yml  pr-check.yml
backend/: build.gradle  settings.gradle
backend/src/main/java/com/reserveflow/: ReserveFlowApplication.java
backend/src/main/java/com/reserveflow/auth/config/: JwtProperties.java  SecurityConfig.java
backend/src/main/java/com/reserveflow/auth/controller/: AuthController.java
backend/src/main/java/com/reserveflow/auth/dto/: CurrentMemberResponse.java  LoginRequest.java  RefreshTokenRequest.java  SignupRequest.java  SignupResponse.java  TokenResponse.java
backend/src/main/java/com/reserveflow/auth/service/: AuthService.java  JwtTokenService.java
backend/src/main/resources/: application.yml
backend/src/main/resources/db/migration/: V1__create_members.sql  V2__create_outbox_events.sql  V3__create_booking_providers.sql  V4__create_booking_provider_business_hours.sql
backend/src/test/java/com/reserveflow/: ReserveFlowApplicationTests.java
backend/src/test/resources/: application-test.yml
llm-service/: .dockerignore  Dockerfile  README.md  pyproject.toml
llm-service/app/: __init__.py  main.py  schemas.py  service.py
llm-service/tests/: test_service.py
memory-bank/: architecture.md  coding-rules.md  current-state.md  decisions.md  llm-extraction-spike.md  llm-interpretation-spike.md  project-brief.md  tasks-archive.md  tasks.md  tech-stack.md  troubleshooting.md
(+51 files in other folders)
