[project]
name = "reserveflow-llm-service"
version = "0.1.0"
description = "ReserveFlow natural-language reservation extraction service"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115,<1.0",
    "langchain>=1.0,<2.0",
    "langchain-openai>=1.0,<2.0",
    "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
test = [
    "httpx>=0.27,<1.0",
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.24,<1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
